<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/roomName_spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_Lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_It"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="Date"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/date_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_Lyt"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_date_24dp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTime_Lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startTime_It"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="Début"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/startTime_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/ic_time_24dp" />

            <ImageView
                android:id="@+id/to_imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                app:srcCompat="@drawable/ic_to" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTime_Lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endTime_It"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:editable="false"
                    android:ems="8"
                    android:hint="Fin"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/endTime_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_time_24dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutMeeting_Lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutMeeting_It"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Sujet Réunion"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/attendees_spinner"
            android:layout_width="350dp"
            android:layout_height="24dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/totalAttendee_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:textSize="16dp"
            android:text="Nombre participants : " />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendee_Lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attendee_It"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nouvel Email"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addAttendeeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:layout_marginStart="350dp"
            android:backgroundTint="@color/colorBgkButtonAdd"
            android:clickable="true"
            app:fabCustomSize="36dp"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="540dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Annuler" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Ajouter" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>